<resources>
    <string name="app_name">Shared Jobs</string>
    <string name="cadastro_plataforma_de_empregos">Cadastro plataforma de empregos</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="e_mail">E-mail</string>
    <string name="receber_emails_com_atualizacoes_e_oportunidades">Receber e-mails com atualizações e oportunidades</string>
    <string name="telefone">Telefone</string>
    <string name="comercial">Comercial</string>
    <string name="residencial">Residencial</string>
    <string name="adicionar_celular">Adicionar telefone celular</string>
    <string name="celular">Celular</string>
    <string name="sexo">Sexo</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="data_de_nascimento">Data de nascimento</string>
    <string name="ano_de_formatura">Ano de formatura</string>
    <string name="ano_de_conclusao">Ano de conclusão</string>
    <string name="instituicao">Instituição</string>
    <string name="titulo_de_monografia">Título de monografia</string>
    <string name="orientador">Orientador</string>
    <string name="vagas_de_interesse">Vagas de interesse</string>
    <string name="salvar">Salvar</string>
    <string name="limpar">Limpar</string>
    <string-array name="formacao">
        <item>Fundamental</item>
        <item>Médio</item>
        <item>Graduação</item>
        <item>Especialização</item>
        <item>Mestrado</item>
        <item>Doutorado</item>
    </string-array>
</resources>