<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_plataforma_de_empregos"
            android:textSize="20sp"
            android:gravity="center_horizontal" />

        <EditText
            android:id="@+id/nomeEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint= "@string/nome_completo"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:layout_margin="5dp" />

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:layout_margin="5dp" />

        <CheckBox
            android:id="@+id/emailCk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/receber_emails_com_atualizacoes_e_oportunidades"
            android:padding="5dp"
            android:layout_margin="5dp" />

        <EditText
            android:id="@+id/telefoneEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefone"
            android:ems="10"
            android:inputType="phone"
            android:padding="5dp"
            android:layout_margin="5dp" />

        <RadioGroup
            android:id="@+id/telefoneRg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:layout_margin="5dp">

            <RadioButton
                android:id="@+id/comercialRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/comercial"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/residencialRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/residencial"/>

        </RadioGroup>

        <CheckBox
            android:id="@+id/celularCk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adicionar_celular"
            android:onClick="onClickButton"
            android:padding="5dp"
            android:layout_margin="5dp" />

        <EditText
            android:id="@+id/celularEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/celular"
            android:ems="10"
            android:inputType="phone"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:visibility="gone"/>

        <TextView
            android:labelFor="@id/sexoRg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sexo"
            android:padding="5dp"
            android:layout_margin="5dp" />


        <RadioGroup
            android:id="@+id/sexoRg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:layout_margin="5dp">

            <RadioButton
                android:id="@+id/masculinoRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/masculino"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/femininoRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/feminino"/>

        </RadioGroup>

        <EditText
            android:id="@+id/dataNascimentoEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/data_de_nascimento"
            android:ems="10"
            android:inputType="date"
            android:padding="5dp"
            android:layout_margin="5dp" />

        <Spinner
            android:id="@+id/formacaoSp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/formacao"
            android:padding="5dp"
            android:layout_margin="5dp"/>

        <EditText
            android:id="@+id/anoFormaturaEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ano_de_formatura"
            android:ems="10"
            android:inputType="date"
            android:padding="5dp"
            android:layout_margin="5dp" />

        <EditText
            android:id="@+id/anoConclusaoEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ano_de_conclusao"
            android:ems="10"
            android:inputType="date"
            android:visibility="gone"
            android:padding="5dp"
            android:layout_margin="5dp" />

        <EditText
            android:id="@+id/instituicaoEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/instituicao"
            android:ems="10"
            android:inputType="text"
            android:visibility="gone"
            android:padding="5dp"
            android:layout_margin="5dp" />

        <EditText
            android:id="@+id/tituloMonografiaEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titulo_de_monografia"
            android:ems="10"
            android:inputType="text"
            android:visibility="gone"
            android:padding="5dp"
            android:layout_margin="5dp" />

        <EditText
            android:id="@+id/orientadorEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/orientador"
            android:ems="10"
            android:inputType="text"
            android:visibility="gone"
            android:padding="5dp"
            android:layout_margin="5dp" />


        <EditText
            android:id="@+id/vagasInteresseEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vagas_de_interesse"
            android:ems="10"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/salvarBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salvar"
            android:onClick="onClickButton"
            android:padding="5dp"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/limparBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/limpar"
            android:onClick="onClickButton"
            android:padding="5dp"
            android:layout_margin="5dp" />

    </LinearLayout>

</ScrollView>

